Css refactoring for text color

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -19,6 +19,7 @@
   width: 8rem;
   height: 8rem;
   background-color: #fff;
+  color: orange;
   border-radius: 100%;
   display: flex;
   align-items: center;
