--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,27 +1,37 @@
 .card {
-  width: 10rem;
-  height: 14rem;
-  position: absolute;
+  width: auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   align-items: center;
   text-align: center;
-  background: #fff;
-  border: 5px solid var(--gray);
-  box-shadow: var(--boxShadow);
   border-radius: 20px;
   padding: 7px;
 }
-.card > :nth-child(1) {
-  transform: scale(0.85);
-  margin-bottom: -1.5rem;
-}
-.card > span:nth-of-type(2) {
+.card > span:nth-of-type(1) {
   color: var(--gray);
-  font-size: 16px;
+  margin-top: 1rem;
+  font-size: 58px;
+  font-weight: bold;
+  position: absolute;
+  border-right: 3px solid gray;
+  padding: 1rem;
+}
+.card > :nth-child(2) {
+  transform: scale(0.5);
+  display: flex;
+  height: 400px;
+  width: auto;
+  align-items: center;
+  justify-content: center;
 }
 
+.card > span:nth-child(3) {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: -10%;
+}
 .c-button {
   width: 60%;
   box-shadow: none;
@@ -30,7 +40,7 @@
   background: rgb(253, 247, 238);
   display: flex;
   flex-direction: column;
-  border: 5px solid var(--orange);
+  border: 5px solid var(--gray);
 }
 .header {
   text-align: center;
@@ -40,6 +50,7 @@
 }
 .picture {
   text-align: center;
+  padding: 2rem;
 }
 .Content {
   text-align: center;
@@ -59,4 +70,33 @@
   background-color: rgb(253, 247, 238);
   text-align: center;
   cursor: pointer;
+}
+
+@media screen and (max-width: 420px) {
+  .c-button {
+    display: none;
+  }
+  .card > span:nth-of-type(1) {
+    font-size: 38px;
+    border-right: none;
+    position: absolute;
+    margin-left: -3rem;
+  }
+  .card > span:nth-child(3) {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 620px) {
+  .c-button {
+    display: none;
+  }
+  .card > span:nth-of-type(1) {
+    font-size: 38px;
+    border-right: none;
+    position: absolute;
+    margin-left: -3rem;
+  }
+  .card > span:nth-child(3) {
+    font-size: 15px;
+  }
 }
