--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -27,13 +27,65 @@
   width: 20rem;
 }
 .portfolio img {
-  width: 19rem;
+  width: 26rem;
+  height: 20rem;
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
   border-radius: 19px;
+  border: 2px solid gray;
   cursor: pointer;
 }
 
 .portfolio img:hover {
   transform: scale(1.2);
   transition: ease-in-out 1s;
+}
+
+@media screen and (max-width: 420px) {
+  .portfolio {
+    margin-top: -10rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio span:nth-child(1) {
+    font-size: 30px;
+  }
+  .portfolio span:nth-child(2) {
+    font-size: 35px;
+  }
+  .portfolio-slider .swiper-slide {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 100%;
+  }
+  .portfolio img {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 620px) {
+  .portfolio {
+    margin-top: -10rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio span:nth-child(1) {
+    font-size: 30px;
+  }
+  .portfolio span:nth-child(2) {
+    font-size: 35px;
+  }
+  .portfolio-slider .swiper-slide {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 100%;
+  }
+  .portfolio img {
+    width: 440px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+  }
 }
